# Automate

./: Automaton.cc  Automaton.h  CMakeLists.txt  fa  fa.cc  testfa.cc
